@@ -1,5 +1,9 @@
+27/12/23:
+-Banding fixed on GI
+-GI voxel grid updates smoothly with camera movement
+
 25/12/23:
--Significant performance improvements for VXGI with mipmap compute shader
+-Significant performance improvements for VCT with mipmap compute shader
 
 24/12/23:
 -Voxel cone traced GI rough implementation
